fix: filters z-index

--- a/css/bouquet-popup.css
+++ b/css/bouquet-popup.css
@@ -15,19 +15,27 @@
 
 @keyframes bouquet-popup {
   0% {
-    transform: scale(0);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%) scale(0);
   }
   100% {
-    transform: scale(1);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%) scale(1);
   }
 }
 
 @keyframes bouquet-popup-close {
   0% {
-    transform: scale(1);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%) scale(1);
   }
   100% {
-    transform: scale(0);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%) scale(0);
   }
 }
 
@@ -37,9 +45,9 @@
   border-radius: 7px;
   background-color: #fff;
   position: absolute;
-  top: 50px;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%);
   animation: bouquet-popup 0.6s;
 }
 
@@ -84,7 +92,6 @@
 .bouquet-popup__text {
   text-align: left;
   margin-top: 20px;
-  display: none;
 }
 
 .bouquet-popup__content {
